tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__prelude__test__panic_emit@pre-mem2reg@llvm21_0.snap
---
source: tket/tket-qsystem/src/llvm/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@e_PANIC.DF25FD88.0 = private constant [15 x i8] c"\0EEXIT:INT:PANIC"

define internal { i64, i64 } @_hl.main.1(i64 %0, i64 %1) !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca i64, align 8
  %"5_0" = alloca { i32, ptr }, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"6_0" = alloca i64, align 8
  %"6_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, ptr } { i32 42, ptr @e_PANIC.DF25FD88.0 }, ptr %"5_0", align 8
  store i64 %0, ptr %"2_0", align 4
  store i64 %1, ptr %"2_1", align 4
  %"5_01" = load { i32, ptr }, ptr %"5_0", align 8
  %"2_02" = load i64, ptr %"2_0", align 4
  %"2_13" = load i64, ptr %"2_1", align 4
  %2 = extractvalue { i32, ptr } %"5_01", 0, !dbg !10
  %shift_code = add i32 %2, 1000, !dbg !10
  %3 = extractvalue { i32, ptr } %"5_01", 1, !dbg !10
  call void @panic(i32 %shift_code, ptr %3), !dbg !10
  store i64 0, ptr %"6_0", align 4, !dbg !10
  store i64 0, ptr %"6_1", align 4, !dbg !10
  %"6_04" = load i64, ptr %"6_0", align 4
  %"6_15" = load i64, ptr %"6_1", align 4
  store i64 %"6_04", ptr %"0", align 4
  store i64 %"6_15", ptr %"1", align 4
  %"06" = load i64, ptr %"0", align 4
  %"17" = load i64, ptr %"1", align 4
  %mrv = insertvalue { i64, i64 } poison, i64 %"06", 0
  %mrv8 = insertvalue { i64, i64 } %mrv, i64 %"17", 1
  ret { i64, i64 } %mrv8
}

; Function Attrs: noreturn
declare void @panic(i32, ptr) #0

attributes #0 = { noreturn }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, i64 }", file: !2, size: 128, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DILocation(line: 27062, column: 402, scope: !3)
